--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -13,6 +13,6 @@
       <ion-title size="large">{{ folder }}</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <app-news-card></app-news-card>
 
 </ion-content>
