--- a/src/app/components/news-card/news-card.component.html
+++ b/src/app/components/news-card/news-card.component.html
@@ -1,10 +1,10 @@
-<ion-card>
-  <img src="https://picsum.photos/800/500" />
+<ion-card href="{{ news.url }}" target="_blank" rel="noopener noreferrer">
+  <ion-img *ngIf="news.urlToImage" src="{{ news.urlToImage }}"></ion-img>
   <ion-card-header>
-    <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-    <ion-card-title>Card Title</ion-card-title>
+    <ion-card-subtitle>{{ news?.source?.name }}</ion-card-subtitle>
+    <ion-card-title>{{ news.title }}</ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    Here's a small text description for the card content. Nothing more, nothing less.
+    {{ news.description }}
   </ion-card-content>
 </ion-card>
