--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -13,6 +13,14 @@
       <ion-title size="large">{{ folder }}</ion-title>
     </ion-toolbar>
   </ion-header>
-  <app-news-card></app-news-card>
+
+  <div id="container">
+    <ion-spinner *ngIf="!newsList"></ion-spinner>
+  </div>
+  <div *ngIf="newsList">
+    <div *ngFor="let news of newsList">
+      <app-news-card [news]="news"></app-news-card>
+    </div>
+  </div>
 
 </ion-content>
