--- a/src/app/components/news-card/news-card.component.html
+++ b/src/app/components/news-card/news-card.component.html
@@ -1,7 +1,7 @@
 <ion-card href="{{ news.url }}" target="_blank" rel="noopener noreferrer">
   <ion-img *ngIf="news.urlToImage" src="{{ news.urlToImage }}"></ion-img>
   <ion-card-header>
-    <ion-card-subtitle>{{ news?.source?.name }}</ion-card-subtitle>
+    <ion-card-subtitle>{{ news.source.name }}</ion-card-subtitle>
     <ion-card-title>{{ news.title }}</ion-card-title>
   </ion-card-header>
   <ion-card-content>
