Create notebook page

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -31,7 +31,7 @@
       Get LocalStorage theme: {{ themeName }}
     </ion-item>
     <ion-item>
-      Get LocalStorage person : {{ person?.name }} : {{ person?.email }}
+      Get LocalStorage person : {{ person.name }} : {{ person.email }}
     </ion-item>
   
   </div>
