--- a/src/app/pages/notebook/notebook.page.html
+++ b/src/app/pages/notebook/notebook.page.html
@@ -1,9 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>notebook</ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content>
-
+  <div class="flex-center">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        <ion-card-title>Title</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        ahoj ahoj
+      </ion-card-content>
+    </ion-card>
+  </div>
+  
 </ion-content>
